--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
     <string name="app_name">Fashionista</string>
+    <string name="copy_right">© 2021 fashionista Mall ALL RIGHTS RESERVED</string>
+
     <string name="server_network_exception">인터넷 연결 상태를 확인해주세요.</string>
 
-    <string name="copy_right">© 2021 fashionista Mall ALL RIGHTS RESERVED</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-    <string name="auth_google_key_value">1041976761194-258jql8vck60rqec12q7l8tbfc92o5ve.apps.googleusercontent.com</string>
-    <string name="facebook_app_id">1277719699412627</string>
-    <string name="fb_login_protocol_scheme">fb1277719699412627</string>
-
+    <string name="main_clothes_hood">HOOD</string>
+    <string name="main_clothes_outer">OUTER</string>
+    <string name="main_clothes_pants">PANTS</string>
+    <string name="main_clothes_t_shirt">T-SHIRT</string>
 
 </resources>
